--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,15 @@
 * {
   box-sizing: border-box;
 }
+
+html {
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  background-image: linear-gradient(315deg, #64bbf5, #fefefe);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
